# CClicker-

./: .gitignore  CMakeLists.txt  README.md  build.sh  compile_commands.json  icon.rc
include/: clicker.hpp  colors.hpp  prompts.hpp
src/: clicker.cpp  colors.cpp  key.cpp  main.cpp  prompts.cpp  prompts.hpp
src/classes/: clicker.hpp  key.cpp  key.hpp
src/clicker/: clicker.cpp  clicker.hpp
src/colors/: colors.cpp  colors.hpp
src/key/: key.cpp  key.hpp
src/prompts/: prompts.cpp  prompts.hpp
